--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,19 @@
-.Img {
-  display: inline-block;
-  width: 150px;
-  min-height: 150px;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
 .App {
   width: 100%;
   height: 100%;
+  text-align: center;
+  align-items: center;
+}
+.App-heading {
+  font-size: 3.5rem;
+  color: #fff;
+  margin: 5rem 0 1rem;
+}
+.Img {
+  display: inline-block;
+  width: 130px;
+  height: 130px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
