--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,16 @@
+html {
+  font-size: 62.5%;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  width: 100%;
+  height: 100vh;
+  font-family: "Montserrat", sans-serif;
+  background: linear-gradient(130deg, #106bd4 40%, #014594);
+}
+#root {
   width: 100%;
   height: 100%;
 }
