--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,15 @@
   height: 100%;
   text-align: center;
   align-items: center;
+  overflow: auto;
+  padding-bottom: 2rem;
+  background: linear-gradient(130deg, #106bd4 40%, #014594);
 }
 .App-heading {
   font-size: 3.5rem;
   color: #fff;
-  margin: 5rem 0 1rem;
+  padding-top: 6rem;
+  margin: 0 0 1rem;
 }
 .Img {
   display: inline-block;
@@ -16,4 +20,10 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+@media (min-width: 500px) {
+  .App-heading {
+    font-size: 6rem;
+  }
 }
