Create HelpIcon and add logic to show and hide ModalHowToUse

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -6,6 +6,7 @@
   overflow: auto;
   padding-bottom: 2rem;
   background: linear-gradient(130deg, #106bd4 40%, #014594);
+  position: relative;
 }
 .App-heading {
   font-size: 3.5rem;
