--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -9,6 +9,8 @@
   color: white;
   outline: none;
   border: none;
+  border-radius: 0;
+  overflow: hidden;
   background-color: transparent;
   border-bottom: 3px solid #034999;
   transition: border 0.2s ease-in;
