--- a/src/components/HelpIcone/HelpIcone.css
+++ b/src/components/HelpIcone/HelpIcone.css
@@ -4,9 +4,11 @@
   bottom: 10px;
   width: 50px;
   height: 50px;
-  border: 2px solid black;
+  border: none;
+  /* border: 2px solid #fff;
+  border-radius: 50%; */
+  color: #fff;
   background-color: transparent;
-  border-radius: 50%;
   font-size: 4rem;
 }
 @media (min-width: 500px) {
